[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "aiohttp>=3.12.14",
    "colorama>=0.4.6",
    "psutil>=7.0.0",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "ujson>=5.10.0",
]
